--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -21,6 +21,8 @@ label.title.table.companu.name = \u041d\u0430\u0437\u0432\u0430 \u043f\u0456\u04
 label.title.table.department.name = \u041d\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043b\u0443
 label.title.table.department.phone = \u0422\u0435\u043b\u0435\u0444\u043e\u043d
 label.title.table.department.fax = \u0424\u0430\u043a\u0441
+label.foma.title.add.department = \u041d\u043e\u0432\u0438\u0439 \u0432\u0456\u0434\u0434\u0456\u043b
+label.foma.title.edit.department = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0432\u0456\u0434\u0434\u0456\u043b
 #
 # button form
 #
