--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -16,22 +16,46 @@ label.main.menu.company = \u041f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441
 label.title.table.companu.id = \u2116
 label.title.table.companu.name = \u041d\u0430\u0437\u0432\u0430 \u043f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u0430
 ################################################################################
-# table title company 
+# table title department
 ################################################################################
 label.title.table.department.name = \u041d\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043b\u0443
 label.title.table.department.phone = \u0422\u0435\u043b\u0435\u0444\u043e\u043d
 label.title.table.department.fax = \u0424\u0430\u043a\u0441
 label.foma.title.add.department = \u041d\u043e\u0432\u0438\u0439 \u0432\u0456\u0434\u0434\u0456\u043b
 label.foma.title.edit.department = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0432\u0456\u0434\u0434\u0456\u043b
-#
+################################################################################
+# table title post 
+################################################################################
+label.title.table.post.number = \u2116
+label.title.table.post.name = \u041d\u0430\u0437\u0432\u0430 \u043f\u043e\u0441\u0430\u0434\u0438
+label.title.table.post.heft = \u0412\u0430\u0436\u043b\u0438\u0432\u0456\u0441\u0442\u044c \u043f\u043e\u0441\u0430\u0434\u0438
+label.foma.title.add.post = \u041d\u043e\u0432\u0430 \u043f\u043e\u0441\u0430\u0434\u0430
+label.foma.title.edit.post = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043f\u043e\u0441\u0430\u0434\u0443
+################################################################################
+# table title employee 
+################################################################################
+label.title.table.employee.number = \u2116 \u0442\u0435\u043b\u0435\u0444\u043e\u043d\u0443
+label.title.table.employee.room = \u041a\u0456\u043c\u043d\u0430\u0442\u0430
+label.title.table.employee.fullName = \u041f\u0406\u0411 \u043f\u0440\u0430\u0446\u0456\u0432\u043d\u0438\u043a\u0430
+label.title.table.employee.company = \u041f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u043e
+label.title.table.employee.department = \u0412\u0456\u0434\u0434\u0456\u043b
+label.title.table.employee.post = \u041f\u043e\u0441\u0430\u0434\u0430
+label.title.table.employee.email = \u0415\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0430 \u0430\u0434\u0440\u0435\u0441\u0430
+label.foma.title.add.employee = \u041d\u043e\u0432\u0438\u0439 \u0441\u043f\u0456\u0432\u0440\u043e\u0431\u0456\u0442\u043d\u0438\u043a\u0430
+label.foma.title.edit.employee = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0441\u043f\u0456\u0432\u0440\u043e\u0431\u0456\u0442\u043d\u0438\u043a\u0430
+################################################################################
+label.form.employee.surname = \u041f\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+label.from.employee.name = \u0406\u043c`\u044f
+label.form.employee.patronymic = \u041f\u043e \u0431\u0430\u0442\u044c\u043a\u043e\u0432\u0456
+################################################################################
 # button form
-#
+################################################################################
 label.buttonSubmit = \u0412\u0438\u043a\u043e\u043d\u0430\u0442\u0438
 label.buttonReset = \u0421\u043a\u0430\u0441\u0443\u0432\u0430\u0442\u0438
 label.buttonBack = \u041f\u043e\u0432\u0435\u0440\u043d\u0443\u0442\u0438\u0441\u044f
-#
+################################################################################
 # form company
-#
+################################################################################
 label.company.new.title = \u041d\u043e\u0432\u0435 \u043f\u0456\u0434\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u043e
 label.company.edit.title = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u043e
 label.company.name = \u041d\u0430\u0437\u0432\u0430
