--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -6,7 +6,7 @@ language = uk
 #
 # menu 
 #
-label.main.menu.employee = \u041f\u0446\u0456\u0432\u043d\u0438\u043a
+label.main.menu.employee = \u041f\u0440\u0430\u0446\u0456\u0432\u043d\u0438\u043a
 label.main.menu.post = \u041f\u043e\u0441\u0430\u0434\u0430
 label.main.menu.departmen = \u0412\u0456\u0434\u0434\u0456\u043b
 label.main.menu.company = \u041f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u043e
