--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -3,59 +3,65 @@
 # and open the template in the editor.
 
 language = uk
-#
+################################################################################
+# main
+################################################################################
+label.button.add = Додати
+label.button.edit = Редагувати
+label.button.delete = Видалити
+################################################################################
 # menu 
-#
-label.main.menu.employee = \u041f\u0440\u0430\u0446\u0456\u0432\u043d\u0438\u043a
-label.main.menu.post = \u041f\u043e\u0441\u0430\u0434\u0430
-label.main.menu.departmen = \u0412\u0456\u0434\u0434\u0456\u043b
-label.main.menu.company = \u041f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u043e
+################################################################################
+label.main.menu.employee = Працівник
+label.main.menu.post = Посада
+label.main.menu.departmen = Посада
+label.main.menu.company = Підприємство
 ################################################################################
 # table title company 
 ################################################################################
-label.title.table.companu.id = \u2116
-label.title.table.companu.name = \u041d\u0430\u0437\u0432\u0430 \u043f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u0430
+label.title.table.companu.id = №
+label.title.table.companu.name = Назва підприємства
 ################################################################################
 # table title department
 ################################################################################
-label.title.table.department.name = \u041d\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043b\u0443
-label.title.table.department.phone = \u0422\u0435\u043b\u0435\u0444\u043e\u043d
-label.title.table.department.fax = \u0424\u0430\u043a\u0441
-label.foma.title.add.department = \u041d\u043e\u0432\u0438\u0439 \u0432\u0456\u0434\u0434\u0456\u043b
-label.foma.title.edit.department = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0432\u0456\u0434\u0434\u0456\u043b
+label.title.table.department.name = Назва відділу
+label.title.table.department.phone = Телефон
+label.title.table.department.fax = Факс
+label.foma.title.add.department = Новий відділ
+label.foma.title.edit.department =  Редагувати відділ
 ################################################################################
 # table title post 
 ################################################################################
-label.title.table.post.number = \u2116
-label.title.table.post.name = \u041d\u0430\u0437\u0432\u0430 \u043f\u043e\u0441\u0430\u0434\u0438
-label.title.table.post.heft = \u0412\u0430\u0436\u043b\u0438\u0432\u0456\u0441\u0442\u044c \u043f\u043e\u0441\u0430\u0434\u0438
-label.foma.title.add.post = \u041d\u043e\u0432\u0430 \u043f\u043e\u0441\u0430\u0434\u0430
-label.foma.title.edit.post = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043f\u043e\u0441\u0430\u0434\u0443
+label.title.table.post.number = №
+label.title.table.post.name = Назва посади
+label.title.table.post.heft = Важливість посади
+label.foma.title.add.post = Нова посада
+label.foma.title.edit.post = Редагувати посаду
 ################################################################################
 # table title employee 
 ################################################################################
-label.title.table.employee.number = \u2116 \u0442\u0435\u043b\u0435\u0444\u043e\u043d\u0443
-label.title.table.employee.room = \u041a\u0456\u043c\u043d\u0430\u0442\u0430
-label.title.table.employee.fullName = \u041f\u0406\u0411 \u043f\u0440\u0430\u0446\u0456\u0432\u043d\u0438\u043a\u0430
-label.title.table.employee.company = \u041f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u043e
-label.title.table.employee.department = \u0412\u0456\u0434\u0434\u0456\u043b
-label.title.table.employee.post = \u041f\u043e\u0441\u0430\u0434\u0430
-label.title.table.employee.email = \u0415\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0430 \u0430\u0434\u0440\u0435\u0441\u0430
-label.foma.title.add.employee = \u041d\u043e\u0432\u0438\u0439 \u0441\u043f\u0456\u0432\u0440\u043e\u0431\u0456\u0442\u043d\u0438\u043a\u0430
-label.foma.title.edit.employee = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0441\u043f\u0456\u0432\u0440\u043e\u0431\u0456\u0442\u043d\u0438\u043a\u0430
+label.title.table.employee.number = Телефон
+label.title.table.employee.room = Кімната
+label.title.table.employee.fullName = ПІБ працівника
+label.title.table.employee.company = Підприємство
+label.title.table.employee.department = Відділ
+label.title.table.employee.post = Посада
+label.title.table.employee.email = Електронна адреса
+label.foma.title.add.employee = Новий співробітника
+label.foma.title.edit.employee = Редагувати співробітника
 ################################################################################
-label.form.employee.surname = \u041f\u0440\u0456\u0437\u0432\u0438\u0449\u0435
-label.from.employee.name = \u0406\u043c`\u044f
-label.form.employee.patronymic = \u041f\u043e \u0431\u0430\u0442\u044c\u043a\u043e\u0432\u0456
+label.form.employee.surname = Прізвище
+label.from.employee.name = Ім`я
+label.form.employee.patronymic = По батькові
 ################################################################################
 # button form
 ################################################################################
-label.buttonSubmit = \u0412\u0438\u043a\u043e\u043d\u0430\u0442\u0438
-label.buttonReset = \u0421\u043a\u0430\u0441\u0443\u0432\u0430\u0442\u0438
-label.buttonBack = \u041f\u043e\u0432\u0435\u0440\u043d\u0443\u0442\u0438\u0441\u044f
+label.buttonSubmit = Виконати
+label.buttonReset = Скасувати
+label.buttonBack = Повернутися
 ################################################################################
 # form company
 ################################################################################
-label.company.new.title = \u041d\u043e\u0432\u0435 \u043f\u0456\u0434\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u043e
-label.company.edit.title = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043f\u0456\u0434\u043f\u0440\u0438\u0454\u043c\u0441\u0442\u0432\u043e
-label.company.name = \u041d\u0430\u0437\u0432\u0430
+label.company.new.title = Нове підриємство
+label.company.edit.title = Редагувати підприємство
+label.company.name = Назва
