--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -14,7 +14,7 @@ label.button.delete = Видалити
 ################################################################################
 label.main.menu.employee = Працівник
 label.main.menu.post = Посада
-label.main.menu.departmen = Посада
+label.main.menu.departmen = Відділ
 label.main.menu.company = Підприємство
 ################################################################################
 # table title company 
