--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -9,63 +9,69 @@
 label.button.add                      = \u0414\u043E\u0434\u0430\u0442\u0438
 label.button.delete                   = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
 label.button.edit                     = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
-label.buttonBack                      = \u041F\u043E\u0432\u0435\u0440\u043D\u0443\u0442\u0438\u0441\u0447
+label.buttonBack                      = \u041F\u043E\u0432\u0435\u0440\u043D\u0443\u0442\u0438\u0441\u044F
 label.buttonReset                     = \u0421\u043A\u0430\u0441\u0443\u0432\u0430\u0442\u0438
 ################################################################################
 # button form
 ################################################################################
 label.buttonSubmit                    = \u0412\u0438\u043A\u043E\u043D\u0430\u0442\u0438
 label.company.edit.title              = \u041A\u043E\u043C\u043F\u0430\u043D\u0456\u044F
-label.company.name                    = \u00D0\u009D\u00D0\u00B0\u00D0\u00B7\u00D0\u00B2\u00D0\u00B0
+label.company.name                    = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
 ################################################################################
 # form company
 ################################################################################
-label.company.new.title               = \u00D0\u009D\u00D0\u00BE\u00D0\u00B2\u00D0\u00B5 \u00D0\u00BF\u00D1\u0096\u00D0\u00B4\u00D1\u0080\u00D0\u00B8\u00D1\u0094\u00D0\u00BC\u00D1\u0081\u00D1\u0082\u00D0\u00B2\u00D0\u00BE
-label.foma.title.add.department       = \u00D0\u009D\u00D0\u00BE\u00D0\u00B2\u00D0\u00B8\u00D0\u00B9 \u00D0\u00B2\u00D1\u0096\u00D0\u00B4\u00D0\u00B4\u00D1\u0096\u00D0\u00BB
-label.foma.title.add.employee         = \u00D0\u009D\u00D0\u00BE\u00D0\u00B2\u00D0\u00B8\u00D0\u00B9 \u00D1\u0081\u00D0\u00BF\u00D1\u0096\u00D0\u00B2\u00D1\u0080\u00D0\u00BE\u00D0\u00B1\u00D1\u0096\u00D1\u0082\u00D0\u00BD\u00D0\u00B8\u00D0\u00BA\u00D0\u00B0
-label.foma.title.add.post             = \u00D0\u009D\u00D0\u00BE\u00D0\u00B2\u00D0\u00B0 \u00D0\u00BF\u00D0\u00BE\u00D1\u0081\u00D0\u00B0\u00D0\u00B4\u00D0\u00B0
-label.foma.title.edit.department      = \u00D0\u00A0\u00D0\u00B5\u00D0\u00B4\u00D0\u00B0\u00D0\u00B3\u00D1\u0083\u00D0\u00B2\u00D0\u00B0\u00D1\u0082\u00D0\u00B8 \u00D0\u00B2\u00D1\u0096\u00D0\u00B4\u00D0\u00B4\u00D1\u0096\u00D0\u00BB
-label.foma.title.edit.employee        = \u00D0\u00A0\u00D0\u00B5\u00D0\u00B4\u00D0\u00B0\u00D0\u00B3\u00D1\u0083\u00D0\u00B2\u00D0\u00B0\u00D1\u0082\u00D0\u00B8 \u00D1\u0081\u00D0\u00BF\u00D1\u0096\u00D0\u00B2\u00D1\u0080\u00D0\u00BE\u00D0\u00B1\u00D1\u0096\u00D1\u0082\u00D0\u00BD\u00D0\u00B8\u00D0\u00BA\u00D0\u00B0
-label.foma.title.edit.post            = \u00D0\u00A0\u00D0\u00B5\u00D0\u00B4\u00D0\u00B0\u00D0\u00B3\u00D1\u0083\u00D0\u00B2\u00D0\u00B0\u00D1\u0082\u00D0\u00B8 \u00D0\u00BF\u00D0\u00BE\u00D1\u0081\u00D0\u00B0\u00D0\u00B4\u00D1\u0083
-label.form.employee.patronymic        = \u00D0\u009F\u00D0\u00BE \u00D0\u00B1\u00D0\u00B0\u00D1\u0082\u00D1\u008C\u00D0\u00BA\u00D0\u00BE\u00D0\u00B2\u00D1\u0096
+label.company.new.title               = \u041D\u043E\u0432\u0435 \u043F\u0456\u0434\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
+label.foma.title.add.department       = \u041D\u043E\u0432\u0438\u0439 \u0432\u0456\u0434\u0434\u0456\u043B
+label.foma.title.add.employee         = \u041D\u043E\u0432\u0438\u0439 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A
+label.foma.title.add.post             = \u041D\u043E\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0430
+label.foma.title.edit.department      = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0432\u0456\u0434\u0434\u0456\u043B
+label.foma.title.edit.employee        = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0430
+label.foma.title.edit.post            = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043F\u043E\u0441\u0430\u0434\u0443
+label.form.employee.patronymic        = \u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
 ################################################################################
-label.form.employee.surname           = \u00D0\u009F\u00D1\u0080\u00D1\u0096\u00D0\u00B7\u00D0\u00B2\u00D0\u00B8\u00D1\u0089\u00D0\u00B5
-label.from.employee.name              = \u00D0\u0086\u00D0\u00BC`\u00D1\u008F
-label.main.menu.company               = \u00D0\u009F\u00D1\u0096\u00D0\u00B4\u00D0\u00BF\u00D1\u0080\u00D0\u00B8\u00D1\u0094\u00D0\u00BC\u00D1\u0081\u00D1\u0082\u00D0\u00B2\u00D0\u00BE
-label.main.menu.departmen             = \u00D0\u0092\u00D1\u0096\u00D0\u00B4\u00D0\u00B4\u00D1\u0096\u00D0\u00BB
+label.form.employee.surname           = \u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+label.from.employee.name              = \u0406\u043C`\u044F
+label.login.error                     = \u041B\u043E\u0433\u0456\u043D \u0430\u0431\u043E \u043F\u0430\u0440\u043E\u043B\u044C \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 \u0432\u0432\u0435\u0434\u0435\u043D\u0456 \u043D\u0435 \u0432\u0456\u0440\u043D\u043E!!!
+label.login.password                  = \u041F\u0430\u0440\u043E\u043B\u044C \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+label.login.submitLogin               = \u0423\u0432\u0456\u0439\u0442\u0438
+label.login.title                     = \u0424\u043E\u0440\u043C\u0430 \u0432\u0445\u043E\u0434\u0443
+label.login.titleLogin                = \u0406\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u0439\u043D\u0430 \u0441\u0438\u0441\u0442\u0435\u043C\u0430 \u043F\u0456\u0434\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430.
+label.login.username                  = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+label.main.menu.company               = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
+label.main.menu.departmen             = \u0412\u0456\u0434\u0434\u0456\u043B
 ################################################################################
 # menu 
 ################################################################################
-label.main.menu.employee              = \u00D0\u009F\u00D1\u0080\u00D0\u00B0\u00D1\u0086\u00D1\u0096\u00D0\u00B2\u00D0\u00BD\u00D0\u00B8\u00D0\u00BA
-label.main.menu.post                  = \u00D0\u009F\u00D0\u00BE\u00D1\u0081\u00D0\u00B0\u00D0\u00B4\u00D0\u00B0
+label.main.menu.employee              = \u041F\u0440\u0430\u0446\u0456\u0432\u043D\u0438\u043A
+label.main.menu.post                  = \u041F\u043E\u0441\u0430\u0434\u0430
 label.phone.addTitle                  = \u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
 label.phone.number                    = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
 ################################################################################
 # table title company 
 ################################################################################
-label.title.table.companu.id          = \u00E2\u0084\u0096
-label.title.table.companu.name        = \u00D0\u009D\u00D0\u00B0\u00D0\u00B7\u00D0\u00B2\u00D0\u00B0 \u00D0\u00BF\u00D1\u0096\u00D0\u00B4\u00D0\u00BF\u00D1\u0080\u00D0\u00B8\u00D1\u0094\u00D0\u00BC\u00D1\u0081\u00D1\u0082\u00D0\u00B2\u00D0\u00B0
-label.title.table.department.fax      = \u00D0\u00A4\u00D0\u00B0\u00D0\u00BA\u00D1\u0081
+label.title.table.companu.id          = \u2116
+label.title.table.companu.name        = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
+label.title.table.department.fax      = \u0424\u0430\u043A\u0441
 ################################################################################
 # table title department
 ################################################################################
-label.title.table.department.name     = \u00D0\u009D\u00D0\u00B0\u00D0\u00B7\u00D0\u00B2\u00D0\u00B0 \u00D0\u00B2\u00D1\u0096\u00D0\u00B4\u00D0\u00B4\u00D1\u0096\u00D0\u00BB\u00D1\u0083
-label.title.table.department.phone    = \u00D0\u00A2\u00D0\u00B5\u00D0\u00BB\u00D0\u00B5\u00D1\u0084\u00D0\u00BE\u00D0\u00BD
-label.title.table.employee.company    = \u00D0\u009F\u00D1\u0096\u00D0\u00B4\u00D0\u00BF\u00D1\u0080\u00D0\u00B8\u00D1\u0094\u00D0\u00BC\u00D1\u0081\u00D1\u0082\u00D0\u00B2\u00D0\u00BE
-label.title.table.employee.department = \u00D0\u0092\u00D1\u0096\u00D0\u00B4\u00D0\u00B4\u00D1\u0096\u00D0\u00BB
-label.title.table.employee.email      = \u00D0\u0095\u00D0\u00BB\u00D0\u00B5\u00D0\u00BA\u00D1\u0082\u00D1\u0080\u00D0\u00BE\u00D0\u00BD\u00D0\u00BD\u00D0\u00B0 \u00D0\u00B0\u00D0\u00B4\u00D1\u0080\u00D0\u00B5\u00D1\u0081\u00D0\u00B0
-label.title.table.employee.fullName   = \u00D0\u009F\u00D0\u0086\u00D0\u0091 \u00D0\u00BF\u00D1\u0080\u00D0\u00B0\u00D1\u0086\u00D1\u0096\u00D0\u00B2\u00D0\u00BD\u00D0\u00B8\u00D0\u00BA\u00D0\u00B0
+label.title.table.department.name     = \u041D\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043B\u0443
+label.title.table.department.phone    = \u0422\u0435\u043B\u0435\u0444\u043E\u043D
+label.title.table.employee.company    = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
+label.title.table.employee.department = \u0412\u0456\u0434\u0434\u0456\u043B
+label.title.table.employee.email      = \u0415\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430 \u0430\u0434\u0440\u0435\u0441\u0430
+label.title.table.employee.fullName   = \u041F\u0406\u0411 \u043F\u0440\u0430\u0446\u0456\u0432\u043D\u0438\u043A\u0430
 ################################################################################
 # table title employee 
 ################################################################################
-label.title.table.employee.number     = \u00D0\u00A2\u00D0\u00B5\u00D0\u00BB\u00D0\u00B5\u00D1\u0084\u00D0\u00BE\u00D0\u00BD
-label.title.table.employee.post       = \u00D0\u009F\u00D0\u00BE\u00D1\u0081\u00D0\u00B0\u00D0\u00B4\u00D0\u00B0
-label.title.table.employee.room       = \u00D0\u009A\u00D1\u0096\u00D0\u00BC\u00D0\u00BD\u00D0\u00B0\u00D1\u0082\u00D0\u00B0
-label.title.table.post.heft           = \u00D0\u0092\u00D0\u00B0\u00D0\u00B6\u00D0\u00BB\u00D0\u00B8\u00D0\u00B2\u00D1\u0096\u00D1\u0081\u00D1\u0082\u00D1\u008C \u00D0\u00BF\u00D0\u00BE\u00D1\u0081\u00D0\u00B0\u00D0\u00B4\u00D0\u00B8
-label.title.table.post.name           = \u00D0\u009D\u00D0\u00B0\u00D0\u00B7\u00D0\u00B2\u00D0\u00B0 \u00D0\u00BF\u00D0\u00BE\u00D1\u0081\u00D0\u00B0\u00D0\u00B4\u00D0\u00B8
+label.title.table.employee.number     = \u0422\u0435\u043B\u0435\u0444\u043E\u043D
+label.title.table.employee.post       = \u041D\u0430\u0437\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0438
+label.title.table.employee.room       = \u041A\u0456\u043C\u043D\u0430\u0442\u0430
+label.title.table.post.heft           = \u0412\u0430\u0436\u043B\u0438\u0432\u0456\u0441\u0442\u044C \u043F\u043E\u0441\u0430\u0434\u0438
+label.title.table.post.name           = \u041D\u0430\u0437\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0438
 ################################################################################
 # table title post 
 ################################################################################
-label.title.table.post.number         = \u00E2\u0084\u0096
+label.title.table.post.number         = \u2116
 
 language = uk
