--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -21,6 +21,8 @@ label.company.name                    = \u041D\u0430\u0437\u0432\u0430 \u043F\u0
 # form company
 ################################################################################
 label.company.new.title               = \u041D\u043E\u0432\u0435 \u043F\u0456\u0434\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
+label.error.minimumSize               = \u0414\u043E\u0432\u0436\u0438\u043D\u0430 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u043D\u043E\u0433\u043E \u043D\u043E\u043C\u0435\u0440\u0443 \u043F\u043E\u0432\u0438\u043D\u043D\u0430 \u0431\u0443\u0442\u0438 \u043D\u0435 \u043C\u0435\u043D\u044C\u0448 \u043D\u044B\u0436 \u0442\u0440\u0438 \u0441\u0438\u043C\u0432\u043E\u043B\u0438
+label.error.null                      = \u041F\u043E\u043B\u0435 \u043D\u0435 \u043F\u043E\u0432\u0438\u043D\u043D\u043E \u0431\u0443\u0442\u0438 \u043F\u043E\u0440\u043E\u0436\u043D\u0456\u043C
 label.foma.title.add.department       = \u041D\u043E\u0432\u0438\u0439 \u0432\u0456\u0434\u0434\u0456\u043B
 label.foma.title.add.employee         = \u041D\u043E\u0432\u0438\u0439 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A
 label.foma.title.add.post             = \u041D\u043E\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0430
@@ -37,6 +39,8 @@ label.login.submitLogin               = \u0423\u0432\u0456\u0439\u0442\u0438
 label.login.title                     = \u0424\u043E\u0440\u043C\u0430 \u0432\u0445\u043E\u0434\u0443
 label.login.titleLogin                = \u0406\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u0439\u043D\u0430 \u0441\u0438\u0441\u0442\u0435\u043C\u0430 \u043F\u0456\u0434\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430.
 label.login.username                  = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+label.main.handbook.tile              = \u0414\u043E\u0432\u0456\u0434\u043D\u0438\u043A\u0438
+label.main.handbook.titlePhone        = \u0422\u0435\u043B\u0435\u0444\u043E\u043D\u0438
 label.main.menu.company               = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
 label.main.menu.departmen             = \u0412\u0456\u0434\u0434\u0456\u043B
 ################################################################################
