--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -39,6 +39,7 @@ label.login.titleLogin                = \u0406\u043D\u0444\u043E\u0440\u043C\u04
 label.login.username                  = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 label.main.handbook.tile              = \u0414\u043E\u0432\u0456\u0434\u043D\u0438\u043A\u0438
 label.main.handbook.titlePhone        = \u0422\u0435\u043B\u0435\u0444\u043E\u043D\u0438
+label.main.handbook.titleRoom         = \u041A\u0456\u043C\u043D\u0430\u0442\u0438
 label.main.menu.company               = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
 label.main.menu.departmen             = \u0412\u0456\u0434\u0434\u0456\u043B
 ################################################################################
@@ -48,6 +49,7 @@ label.main.menu.employee              = \u041F\u0440\u0430\u0446\u0456\u0432\u04
 label.main.menu.post                  = \u041F\u043E\u0441\u0430\u0434\u0430
 label.phone.addTitle                  = \u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
 label.phone.number                    = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
+label.room.number                     = \u041D\u043E\u043C\u0435\u0440 \u043A\u0456\u043C\u043D\u0430\u0442\u0438
 ################################################################################
 # table title company 
 ################################################################################
@@ -75,5 +77,6 @@ label.title.table.post.name           = \u041D\u0430\u0437\u0432\u0430 \u043F\u0
 # table title post 
 ################################################################################
 label.title.table.post.number         = \u2116
+label.title.table.room                = \u041A\u0456\u043C\u043D\u0430\u0442\u0438
 
 language = uk
