I'm adding functional room

--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -49,6 +49,8 @@ label.main.menu.employee              = \u041F\u0440\u0430\u0446\u0456\u0432\u04
 label.main.menu.post                  = \u041F\u043E\u0441\u0430\u0434\u0430
 label.phone.addTitle                  = \u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
 label.phone.number                    = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
+label.room.addTitle                   = \u041D\u0430\u0432\u0430 \u043A\u0456\u043C\u043D\u0430\u0442\u0430
+label.room.editTitle                  = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043A\u0456\u043C\u043D\u0430\u0442\u0443
 label.room.number                     = \u041D\u043E\u043C\u0435\u0440 \u043A\u0456\u043C\u043D\u0430\u0442\u0438
 ################################################################################
 # table title company 
