--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -9,6 +9,8 @@
 label.button.add                      = \u0414\u043E\u0434\u0430\u0442\u0438
 label.button.delete                   = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
 label.button.edit                     = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
+label.button.login                    = \u0423\u0432\u0456\u0439\u0442\u0438
+label.button.logoff                   = \u0412\u0438\u0439\u0442\u0438
 label.buttonBack                      = \u041F\u043E\u0432\u0435\u0440\u043D\u0443\u0442\u0438\u0441\u044F
 label.buttonReset                     = \u0421\u043A\u0430\u0441\u0443\u0432\u0430\u0442\u0438
 ################################################################################
