--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -7,13 +7,21 @@ buttonname.login  = \u0423\u0432\u0456\u0439\u0442\u0438
 buttonname.logoff = \u0412\u0438\u0439\u0442\u0438
 buttonname.submit = \u0412\u0438\u043A\u043E\u043D\u0430\u0442\u0438
 
-inputlabel.company      = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
-inputlabel.department   = \u0412\u0456\u0434\u0434\u0456\u043B
-inputlabel.fullname     = \u041F. \u0406. \u0411 \u043F\u0440\u0430\u0446\u0456\u0432\u043D\u0438\u043A\u0430
-inputlabel.nameEmployee = \u0406\u043C'\u044F
-inputlabel.password     = \u041F\u0430\u0440\u043E\u043B\u044C \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
-inputlabel.surname      = \u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
-inputlabel.username     = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+inputlabel.company        = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
+inputlabel.department     = \u0412\u0456\u0434\u0434\u0456\u043B
+inputlabel.email          = \u0415\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u0430 \u043F\u043E\u0448\u0442\u0430
+inputlabel.fullname       = \u041F. \u0406. \u0411 \u043F\u0440\u0430\u0446\u0456\u0432\u043D\u0438\u043A\u0430
+inputlabel.login          = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+inputlabel.nameDepartment = \u041D\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043B\u0443
+inputlabel.nameEmployee   = \u0406\u043C'\u044F
+inputlabel.nameEnterprise = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
+inputlabel.namePost       = \u041D\u0430\u0437\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0438
+inputlabel.numberPhone    = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
+inputlabel.numberRoom     = \u041D\u043E\u043C\u0435\u0440 \u043A\u0456\u043C\u043D\u0430\u0442\u0438
+inputlabel.password       = \u041F\u0430\u0440\u043E\u043B\u044C \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+inputlabel.patronymic     = \u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
+inputlabel.surname        = \u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+inputlabel.username       = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 
 language = uk
 
