--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -48,4 +48,7 @@ titleform.updateEmployee   = \u0420\u0435\u0434\u0432\u0433\u0443\u0432\u0430\u0
 
 titlepage.login = \u0412\u0445\u0456\u0434 \u0434\u043E \u0441\u0438\u0441\u0442\u0435\u043C\u0438
 
+placeholder.phone 			= 000-00-00
+placeholder.fax				= 000-00-00
+
 unique.value.violation = \u0422\u0430\u043A\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0432\u0436\u0435 \u0454!
