--- a/task/src/main/resources/locale_uk.properties
+++ b/task/src/main/resources/locale_uk.properties
@@ -4,6 +4,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 buttonname.add    = \u0414\u043E\u0434\u0430\u0442\u0438
+buttonname.cancel = \u0421\u043A\u0430\u0441\u0443\u0432\u0430\u0442\u0438
 buttonname.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
 buttonname.edit   = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
 buttonname.login  = \u0423\u0432\u0456\u0439\u0442\u0438
@@ -31,7 +32,11 @@ inputlabel.username       = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0
 
 language = uk
 
+placeholder.fax   = 000-00-00
+placeholder.phone = 000-00-00
+
 titleform.admin            = \u0410\u0434\u043C\u0456\u043D\u0447\u0430\u0441\u0442\u0438\u043D\u0430
+titleform.deleteEmployee   = \u0412\u0438 \u0434\u0456\u0439\u0441\u043D\u043E \u0431\u0430\u0436\u0430\u0454\u0442\u0435 \u0432\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 titleform.departments      = \u0412\u0456\u0434\u0434\u0456\u043B
 titleform.edit             = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0437\u0430\u043F\u0438\u0441
 titleform.editPosition     = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043F\u043E\u0441\u0430\u0434\u0443
@@ -47,8 +52,5 @@ titleform.room             = \u041A\u0456\u043C\u043D\u0430\u0442\u0438
 titleform.updateEmployee   = \u0420\u0435\u0434\u0432\u0433\u0443\u0432\u0430\u0442\u0438 \u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0430
 
 titlepage.login = \u0412\u0445\u0456\u0434 \u0434\u043E \u0441\u0438\u0441\u0442\u0435\u043C\u0438
-
-placeholder.phone 			= 000-00-00
-placeholder.fax				= 000-00-00
 
 unique.value.violation = \u0422\u0430\u043A\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0432\u0436\u0435 \u0454!
