--- a/task/src/main/resources/messages_uk.properties
+++ b/task/src/main/resources/messages_uk.properties
@@ -14,6 +14,7 @@ inputlabel.fullname       = \u041F. \u0406. \u0411 \u043F\u0440\u0430\u0446\u045
 inputlabel.heftPost       = \ \u0421\u043E\u0440\u0442\u0443\u0432\u0430\u043D\u043D\u044F \u043F\u043E\u0430\u0434\u0438
 inputlabel.isdisable      = \u0412\u0456\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u043E
 inputlabel.login          = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+inputlabel.nameCompany    = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
 inputlabel.nameDepartment = \u041D\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043B\u0443
 inputlabel.nameEmployee   = \u0406\u043C'\u044F
 inputlabel.nameEnterprise = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
