adding delete company

--- a/task/src/main/resources/messages.properties
+++ b/task/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
-unique.value.violation	= Такий запис вже існує!
 
 error.fieldMatch     = \u043F\u043E\u043B\u044F \u043F\u0430\u0440\u043E\u043B\u044F \u043F\u043E\u0432\u0438\u043D\u043D\u0456 \u0441\u043F\u0456\u0432\u043F\u0430\u0434\u0430\u0442\u0438
 error.uniqueUsername = \u0442\u0430\u043A\u0435 \u0456\u043C'\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 \u0432\u0436\u0435 \u0456\u0441\u043D\u0443\u0454
+
 javax.validation.constraints.AssertFalse.message     = must be false
 javax.validation.constraints.AssertTrue.message      = must be true
 javax.validation.constraints.DecimalMax.message      = must be less than ${inclusive == true ? 'or equal to ' : ''}{value}
@@ -20,10 +20,11 @@ javax.validation.constraints.NotNull.message         = must not be null
 javax.validation.constraints.Null.message            = must be null
 javax.validation.constraints.Past.message            = must be a past date
 javax.validation.constraints.PastOrPresent.message   = must be a date in the past or in the present
-javax.validation.constraints.Pattern.message         = повинні відповідати "{regexp}"
+javax.validation.constraints.Pattern.message         = \u00D0\u00BF\u00D0\u00BE\u00D0\u00B2\u00D0\u00B8\u00D0\u00BD\u00D0\u00BD\u00D1\u0096 \u00D0\u00B2\u00D1\u0096\u00D0\u00B4\u00D0\u00BF\u00D0\u00BE\u00D0\u00B2\u00D1\u0096\u00D0\u00B4\u00D0\u00B0\u00D1\u0082\u00D0\u00B8 "{regexp}"
 javax.validation.constraints.Positive.message        = must be greater than 0
 javax.validation.constraints.PositiveOrZero.message  = must be greater than or equal to 0
 javax.validation.constraints.Size.message            = \u0440\u043E\u0437\u043C\u0456\u0440 \u043F\u043E\u0432\u0438\u043D\u0435\u043D \u0431\u0443\u0442\u0438 \u0432\u0456\u0434 {min} \u0434\u043E {max}
+
 org.hibernate.validator.constraints.CodePointLength.message        = length must be between {min} and {max}
 org.hibernate.validator.constraints.CreditCardNumber.message       = invalid credit card number
 org.hibernate.validator.constraints.Currency.message               = invalid currency (must be one of {value})
@@ -50,3 +51,7 @@ org.hibernate.validator.constraints.pl.PESEL.message               = invalid Pol
 org.hibernate.validator.constraints.pl.REGON.message               = invalid Polish Taxpayer Identification Number (REGON)
 org.hibernate.validator.constraints.time.DurationMax.message       = must be shorter than${inclusive == true ? ' or equal to' : ''}${days == 0 ? '' : days == 1 ? ' 1 day' : ' ' += days += ' days'}${hours == 0 ? '' : hours == 1 ? ' 1 hour' : ' ' += hours += ' hours'}${minutes == 0 ? '' : minutes == 1 ? ' 1 minute' : ' ' += minutes += ' minutes'}${seconds == 0 ? '' : seconds == 1 ? ' 1 second' : ' ' += seconds += ' seconds'}${millis == 0 ? '' : millis == 1 ? ' 1 milli' : ' ' += millis += ' millis'}${nanos == 0 ? '' : nanos == 1 ? ' 1 nano' : ' ' += nanos += ' nanos'}
 org.hibernate.validator.constraints.time.DurationMin.message       = must be longer than${inclusive == true ? ' or equal to' : ''}${days == 0 ? '' : days == 1 ? ' 1 day' : ' ' += days += ' days'}${hours == 0 ? '' : hours == 1 ? ' 1 hour' : ' ' += hours += ' hours'}${minutes == 0 ? '' : minutes == 1 ? ' 1 minute' : ' ' += minutes += ' minutes'}${seconds == 0 ? '' : seconds == 1 ? ' 1 second' : ' ' += seconds += ' seconds'}${millis == 0 ? '' : millis == 1 ? ' 1 milli' : ' ' += millis += ' millis'}${nanos == 0 ? '' : nanos == 1 ? ' 1 nano' : ' ' += nanos += ' nanos'}
+
+titleform.deleteCompany = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E 
+
+unique.value.violation = \u00D0\u00A2\u00D0\u00B0\u00D0\u00BA\u00D0\u00B8\u00D0\u00B9 \u00D0\u00B7\u00D0\u00B0\u00D0\u00BF\u00D0\u00B8\u00D1\u0081 \u00D0\u00B2\u00D0\u00B6\u00D0\u00B5 \u00D1\u0096\u00D1\u0081\u00D0\u00BD\u00D1\u0083\u00D1\u0094!
