--- a/task/src/main/resources/messages_uk.properties
+++ b/task/src/main/resources/messages_uk.properties
@@ -59,6 +59,7 @@ titleform.new              = \u041D\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u
 titleform.newEmployee      = \u041D\u043E\u0432\u0438\u0439 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A
 titleform.newPosition      = \u041D\u043E\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0430
 titleform.position         = \u041F\u043E\u0441\u0430\u0434\u0430
+titleform.positions        = \u041F\u043E\u0441\u0430\u0434\u0438
 titleform.room             = \u041A\u0456\u043C\u043D\u0430\u0442\u0438
 titleform.updateEmployee   = \u0420\u0435\u0434\u0432\u0433\u0443\u0432\u0430\u0442\u0438 \u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0430
 
