view form user applecation

--- a/task/src/main/resources/messages.properties
+++ b/task/src/main/resources/messages.properties
@@ -30,6 +30,7 @@ inputlabel.password       = \u041F\u0430\u0440\u043E\u043B\u044C \u043A\u043E\u0
 inputlabel.patronymic     = \u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
 inputlabel.surname        = \u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
 inputlabel.username       = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+inputlabel.roles		  = \u0420\u043E\u043B\u0456
 
 javax.validation.constraints.AssertFalse.message     = must be false
 javax.validation.constraints.AssertTrue.message      = must be true
@@ -107,6 +108,8 @@ titleform.position         = \u041F\u043E\u0441\u0430\u0434\u0430
 titleform.positions        = \u041F\u043E\u0441\u0430\u043B\u0438
 titleform.room             = \u041A\u0456\u043C\u043D\u0430\u0442\u0438
 titleform.updateEmployee   = \u0420\u0435\u0434\u0432\u0433\u0443\u0432\u0430\u0442\u0438 \u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0430
+titleform.users            = \u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+titleform.roles			   = \u0420\u043E\u043B\u0456
 
 titlepage.login = \u0412\u0445\u0456\u0434 \u0434\u043E \u0441\u0438\u0441\u0442\u0435\u043C\u0438
 
