--- a/task/src/main/resources/messages.properties
+++ b/task/src/main/resources/messages.properties
@@ -88,12 +88,14 @@ org.hibernate.validator.constraints.time.DurationMin.message       = must be lon
 placeholder.atsGroup = 000
 placeholder.fax      = 000-00-00
 placeholder.phone    = 000-00-00
+placeholder.userdell = \u0412\u0438 \u0434\u0456\u0439\u0441\u043D\u043E \u0431\u0430\u0436\u0430\u0454\u0442\u0435 \u0432\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 {0}?
 
 titleform.admin            = \u0410\u0434\u043C\u0456\u043D\u0447\u0430\u0441\u0442\u0438\u043D\u0430
 titleform.company          = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
 titleform.deleteCompany    = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E 
 titleform.deleteEmployee   = \u0412\u0438 \u0434\u0456\u0439\u0441\u043D\u043E \u0431\u0430\u0436\u0430\u0454\u0442\u0435 \u0432\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 titleform.deletePosition   = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043F\u043E\u0441\u0430\u0434\u0443
+titleform.deleteUser       = \u0412\u0438\u0434\u0430\u043B\u0435\u043D\u043D\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430.
 titleform.department       = \u0412\u0442\u0434\u0456\u043B
 titleform.departments      = \u0412\u0456\u0434\u0434\u0456\u043B\u0438
 titleform.edit             = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0437\u0430\u043F\u0438\u0441
