--- a/task/src/main/resources/messages.properties
+++ b/task/src/main/resources/messages.properties
@@ -133,3 +133,4 @@ unique.value.violation = \u00D0\u00A2\u00D0\u00B0\u00D0\u00BA\u00D0\u00B8\u00D0\
 label.newuser=Новий користувач
 error.login=Введений логін або прароль не коректний
 titleform.phone=Телефони
+input.checkbox=<label>{0}</label>
