--- a/task/src/main/resources/messages_uk.properties
+++ b/task/src/main/resources/messages_uk.properties
@@ -89,3 +89,4 @@ unique.value.violation = \u0422\u0430\u043A\u0438\u0439 \u0437\u0430\u043F\u0438
 label.newuser=Новий користувач
 error.login=Введений логін або прароль не коректний
 titleform.phone=Телефони
+input.checkbox=<label>{0}</label>
